src/index.css
* {
    font-family: arial;
    margin: 0px;
}

body {
    background-color: #EEE;
}


/* #######################
   ## blog title #########
   ####################### */
header {
    position: relative;
    display: flex;
    justify-content: center;
}

header a {
    text-decoration: none;
    text-shadow: 4px 4px 12px #BBB;
}

/* accentuate shadow when hovered */
header a:hover { 
    text-shadow: 4px 4px 12px #999;
}

header h1 {
    color: #222;
    font-size: 9em;
    font-weight: bold;
    margin: 100px;
}


/* #######################
   ## contact section ####
   ####################### */
.contact {
    position: absolute;
    right: 2%;
    top: 50%;
    transform: translateY(-50%);
    
    display: flex;
    flex-direction: column;
}

.contact img {
    margin: 15px 5px 15px 5px;
    height: 40px;
    transition: transform 0.4s ease 0s;
}

.contact img:hover {
    transform: rotate(20deg);
}


/* #######################
   ## article ############
   ####################### */
.article {
    position: relative;
}

.article img {
    width: 100%;
    display: block;
    
    transition: transform 1.5s ease-out 0s;
}

.article:hover img {
    transform: scale(1.1);
}

.article h2 {
    color: #EEE;
    font-size: 2em;
    text-shadow: 4px 4px 20px #DDD;
    
    /* position text on image */
    position: absolute;
    right: 5%;
    top: 50%;
    transform: translateY(-50%);
}

